rt/test/errors/034/test.volt
//T macro:expect-failure
//T check:test.volt:7
module test;

fn main() i32
{
	str := "${+}";
}
